Current/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
        name: postgres
spec:
        replicas: 1
        strategy:
          type: RollingUpdate
          rollingUpdate:
            maxSurge: 0
            maxUnavailable: 1
        selector:
          matchLabels:
            app: postgres
        template:
            metadata:
              labels:
                app: postgres
            spec:
              volumes:
              - name: postgres-pv-storage
                persistentVolumeClaim:
                   claimName: p1 
              containers:
                - name: postgres
                  image: postgres:10.13
                  ports: 
                    - containerPort: 5432
                      protocol: TCP
                      name: postgres-server
                  volumeMounts:
                    - mountPath: /var/lib/postgresql/data/
                      name: postgres-pv-storage
