Current/redmine.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
        name: redmine
spec:
        replicas: 1
        strategy:
          type: RollingUpdate
          rollingUpdate:
            maxSurge: 0
            maxUnavailable: 1
        selector:
          matchLabels:
            app: redmine
        template:
            metadata:
              labels:
                app: redmine
            spec:
              containers:
                - name: redmine-pod
                  image: redmine:4.1.1
                  ports: 
                    - containerPort: 3000
                      name: "redmine-server"
