Current/service_redmine.yaml
apiVersion: v1
kind: Service
metadata:
  name: redmine-service
spec:
  selector:
    app: redmine
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 3000
  type: NodePort #ClusterIP
