Current/redmine_ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
      secretName: yc-certmgr-cert-id-fpq9l9isi603due2m923
  rules:
    - host: questbusters.ru
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: redmine-service
              port:
                number: 3000
